# TCG-Card-Game-Server

./: .gitignore  Cargo.toml  README.md
resources/csv/: README.md
src/: main.rs
src/account_card/: mod.rs
src/battle_match_monitor/: mod.rs
src/battle_ready_monitor/: mod.rs
src/battle_room_manager/: mod.rs
src/battle_wait_queue/: mod.rs
src/card/: mod.rs
src/card_attack_point/: mod.rs
src/card_kinds/: mod.rs
src/client_socket_accept/: mod.rs
src/common/: mod.rs
src/deck_configuration_validator/: mod.rs
src/domain_initializer/: initializer.rs  mod.rs
src/fake_battle_room/: mod.rs
src/first_turn_decision_wait_queue/: mod.rs
src/game_card_active_skill/: mod.rs
src/game_card_energy/: mod.rs
src/game_card_passive_skill/: mod.rs
src/game_card_support/: mod.rs
src/game_card_support_usage_counter/: mod.rs
src/game_card_tool/: mod.rs
src/game_card_unit/: mod.rs
src/game_deck/: mod.rs
src/game_first_active_skill/: mod.rs
src/game_turn/: mod.rs
src/mulligan/: mod.rs
src/mysql_config/: mod.rs  mysql_connection.rs
src/notify_player_action/: mod.rs
src/request_generator/: account_card_request_generator.rs  account_deck_card_request_generator.rs  account_deck_request_generator.rs  account_point_request_generator.rs  account_register_req.rs  account_request_generator.rs  attach_field_energy_to_field_unit_request_form_generator.rs  attach_general_energy_card_request_form_generator.rs  attach_special_energy_card_request_form_generator.rs  attach_special_energy_request_form_generator.rs  attack_unit_request_form_generator.rs  (+54 more)
(+1770 files in other folders)
