[package]
name = "TCG-Card-Game-Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "*"
lazy_static="*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
env_logger = { version = "0.10.1", features = [] }
futures = "0.3.30"
dotenv = "*"

serde = { version = "*", features = ["derive"] }
serde-pickle = "*"
serde_json = "*"

tokio-diesel = "*"
diesel = { version = "*", features = ["mysql"] }
bcrypt = "*"

ipc-channel = "*"
uuid = "*"

csv = "*"
